kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fishky-proxy
spec:
  selector:
    matchLabels:
      app: fishky-proxy
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: fishky-proxy
        tier: backend
    spec:
      containers:
      - name: fishky-proxy
        image: damianiero/fishky-proxy:0.9.4
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 90
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
