kubernetes-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fishky-flashcard-service-nodeport-service
  labels:
    app: fishky-flashcard-service
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 30508
    nodePort: 30508
    targetPort: 8080
  selector:
    app: fishky-flashcard-service
    tier: backend
