kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fishky-proxy-service
  labels:
    app: fishky-proxy
    tier: backend
spec:
  ports:
  - port: 30508
    protocol: TCP
    targetPort: 8080
  selector:
    app: fishky-proxy
    tier: backend
