kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fishky-flashcard-service-ingress
  annotations:
    dev.okteto.com/generate-host: fishky
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fishky-flashcard-service
                port:
                  number: 30508
            path: /
            pathType: ImplementationSpecific
